--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -92,8 +92,14 @@
   position: relative;
   overflow: hidden;
 
+  @media screen and (max-width: 767px) {
+    height: 294px;
+  }
+
   img {
+    height: 100%;
     width: 100%;
+    object-fit: cover;
   }
 }
 
@@ -133,6 +139,10 @@
   top: 0;
   left: 0;
   transform: translateY(100%);
+
+  @media screen and (max-width: 479px) {
+    padding: 24px;
+  }
 
   @media screen and (min-width: $mobile) {
     width: 450px;
